--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"paste/pre": "dev-master",
+		"barryvdh/laravel-debugbar": "1.7.*@dev",
+		"laracasts/utilities": "~1.0"
 	},
 	"autoload": {
 		"classmap": [
@@ -33,5 +36,6 @@
 	"config": {
 		"preferred-install": "dist"
 	},
+	
 	"minimum-stability": "stable"
 }
